syntax = "proto3";

option csharp_namespace = "Home.Plant.Watering.Shared";

service PumpService {
  rpc Start (StartPumpRequest) returns (StartPumpResponse) {}
  rpc Stop (StopPumpRequest) returns (StopPumpResponse) {}
  rpc StatusStream (PumpStatusStreamRequest) returns (stream PumpStatusStreamResponse) {}
}

message StartPumpRequest {
  
}

message StartPumpResponse {

}


message StopPumpRequest {
  
}

message StopPumpResponse {

}


message PumpStatusStreamRequest {
}

message PumpStatusStreamResponse {
  string Hostname = 1;
  bool IsPumping = 2;
  int64 timestamp = 3;
}
